logs/cleaning.txt
Script started on 2018-09-26 10:51:41+0530
raja@raja-Inspiron-5558:/mnt/InternalHardDik/Programs/Python/EmotionDet$ python3 data_cleaning.py -s DC
['data/savee/AudioVisualClip/DC/a1.avi', 'data/savee/AudioVisualClip/DC/a10.avi', 'data/savee/AudioVisualClip/DC/a11.avi', 'data/savee/AudioVisualClip/DC/a12.avi', 'data/savee/AudioVisualClip/DC/a13.avi', 'data/savee/AudioVisualClip/DC/a14.avi', 'data/savee/AudioVisualClip/DC/a15.avi', 'data/savee/AudioVisualClip/DC/a2.avi', 'data/savee/AudioVisualClip/DC/a3.avi', 'data/savee/AudioVisualClip/DC/a4.avi', 'data/savee/AudioVisualClip/DC/a5.avi', 'data/savee/AudioVisualClip/DC/a6.avi', 'data/savee/AudioVisualClip/DC/a7.avi', 'data/savee/AudioVisualClip/DC/a8.avi', 'data/savee/AudioVisualClip/DC/a9.avi', 'data/savee/AudioVisualClip/DC/d1.avi', 'data/savee/AudioVisualClip/DC/d10.avi', 'data/savee/AudioVisualClip/DC/d11.avi', 'data/savee/AudioVisualClip/DC/d12.avi', 'data/savee/AudioVisualClip/DC/d13.avi', 'data/savee/AudioVisualClip/DC/d15.avi', 'data/savee/AudioVisualClip/DC/d2.avi', 'data/savee/AudioVisualClip/DC/d3.avi', 'data/savee/AudioVisualClip/DC/d4.avi', 'data/savee/AudioVisualClip/DC/d5.avi', 'data/savee/AudioVisualClip/DC/d6.avi', 'data/savee/AudioVisualClip/DC/d7.avi', 'data/savee/AudioVisualClip/DC/d8.avi', 'data/savee/AudioVisualClip/DC/d9.avi', 'data/savee/AudioVisualClip/DC/f1.avi', 'data/savee/AudioVisualClip/DC/f10.avi', 'data/savee/AudioVisualClip/DC/f11.avi', 'data/savee/AudioVisualClip/DC/f12.avi', 'data/savee/AudioVisualClip/DC/f13.avi', 'data/savee/AudioVisualClip/DC/f14.avi', 'data/savee/AudioVisualClip/DC/f15.avi', 'data/savee/AudioVisualClip/DC/f2.avi', 'data/savee/AudioVisualClip/DC/f3.avi', 'data/savee/AudioVisualClip/DC/f4.avi', 'data/savee/AudioVisualClip/DC/f5.avi', 'data/savee/AudioVisualClip/DC/f7.avi', 'data/savee/AudioVisualClip/DC/f8.avi', 'data/savee/AudioVisualClip/DC/f9.avi', 'data/savee/AudioVisualClip/DC/h1.avi', 'data/savee/AudioVisualClip/DC/h10.avi', 'data/savee/AudioVisualClip/DC/h11.avi', 'data/savee/AudioVisualClip/DC/h12.avi', 'data/savee/AudioVisualClip/DC/h13.avi', 'data/savee/AudioVisualClip/DC/h14.avi', 'data/savee/AudioVisualClip/DC/h15.avi', 'data/savee/AudioVisualClip/DC/h2.avi', 'data/savee/AudioVisualClip/DC/h3.avi', 'data/savee/AudioVisualClip/DC/h4.avi', 'data/savee/AudioVisualClip/DC/h5.avi', 'data/savee/AudioVisualClip/DC/h6.avi', 'data/savee/AudioVisualClip/DC/h7.avi', 'data/savee/AudioVisualClip/DC/h8.avi', 'data/savee/AudioVisualClip/DC/h9.avi', 'data/savee/AudioVisualClip/DC/n1.avi', 'data/savee/AudioVisualClip/DC/n10.avi', 'data/savee/AudioVisualClip/DC/n12.avi', 'data/savee/AudioVisualClip/DC/n13.avi', 'data/savee/AudioVisualClip/DC/n14.avi', 'data/savee/AudioVisualClip/DC/n15.avi', 'data/savee/AudioVisualClip/DC/n16.avi', 'data/savee/AudioVisualClip/DC/n17.avi', 'data/savee/AudioVisualClip/DC/n18.avi', 'data/savee/AudioVisualClip/DC/n19.avi', 'data/savee/AudioVisualClip/DC/n2.avi', 'data/savee/AudioVisualClip/DC/n20.avi', 'data/savee/AudioVisualClip/DC/n21.avi', 'data/savee/AudioVisualClip/DC/n22.avi', 'data/savee/AudioVisualClip/DC/n23.avi', 'data/savee/AudioVisualClip/DC/n24.avi', 'data/savee/AudioVisualClip/DC/n25.avi', 'data/savee/AudioVisualClip/DC/n26.avi', 'data/savee/AudioVisualClip/DC/n27.avi', 'data/savee/AudioVisualClip/DC/n28.avi', 'data/savee/AudioVisualClip/DC/n29.avi', 'data/savee/AudioVisualClip/DC/n3.avi', 'data/savee/AudioVisualClip/DC/n4.avi', 'data/savee/AudioVisualClip/DC/n5.avi', 'data/savee/AudioVisualClip/DC/n6.avi', 'data/savee/AudioVisualClip/DC/n7.avi', 'data/savee/AudioVisualClip/DC/n8.avi', 'data/savee/AudioVisualClip/DC/n9.avi', 'data/savee/AudioVisualClip/DC/sa1.avi', 'data/savee/AudioVisualClip/DC/sa10.avi', 'data/savee/AudioVisualClip/DC/sa11.avi', 'data/savee/AudioVisualClip/DC/sa12.avi', 'data/savee/AudioVisualClip/DC/sa13.avi', 'data/savee/AudioVisualClip/DC/sa14.avi', 'data/savee/AudioVisualClip/DC/sa15.avi', 'data/savee/AudioVisualClip/DC/sa2.avi', 'data/savee/AudioVisualClip/DC/sa3.avi', 'data/savee/AudioVisualClip/DC/sa4.avi', 'data/savee/AudioVisualClip/DC/sa5.avi', 'data/savee/AudioVisualClip/DC/sa6.avi', 'data/savee/AudioVisualClip/DC/sa7.avi', 'data/savee/AudioVisualClip/DC/sa8.avi', 'data/savee/AudioVisualClip/DC/sa9.avi', 'data/savee/AudioVisualClip/DC/su1.avi', 'data/savee/AudioVisualClip/DC/su10.avi', 'data/savee/AudioVisualClip/DC/su11.avi', 'data/savee/AudioVisualClip/DC/su12.avi', 'data/savee/AudioVisualClip/DC/su13.avi', 'data/savee/AudioVisualClip/DC/su14.avi', 'data/savee/AudioVisualClip/DC/su15.avi', 'data/savee/AudioVisualClip/DC/su2.avi', 'data/savee/AudioVisualClip/DC/su3.avi', 'data/savee/AudioVisualClip/DC/su4.avi', 'data/savee/AudioVisualClip/DC/su5.avi', 'data/savee/AudioVisualClip/DC/su6.avi', 'data/savee/AudioVisualClip/DC/su7.avi', 'data/savee/AudioVisualClip/DC/su8.avi', 'data/savee/AudioVisualClip/DC/su9.avi', 'data/savee/AudioVisualClip/DC/d14.avi', 'data/savee/AudioVisualClip/DC/f6.avi', 'data/savee/AudioVisualClip/DC/n11.avi', 'data/savee/AudioVisualClip/DC/n30.avi']
0 vid name: data/savee/AudioVisualClip/DC/a1.avi
1 vid name: data/savee/AudioVisualClip/DC/a10.avi
2 vid name: data/savee/AudioVisualClip/DC/a11.avi
3 vid name: data/savee/AudioVisualClip/DC/a12.avi
4 vid name: data/savee/AudioVisualClip/DC/a13.avi
5 vid name: data/savee/AudioVisualClip/DC/a14.avi
6 vid name: data/savee/AudioVisualClip/DC/a15.avi
7 vid name: data/savee/AudioVisualClip/DC/a2.avi
8 vid name: data/savee/AudioVisualClip/DC/a3.avi
9 vid name: data/savee/AudioVisualClip/DC/a4.avi
10 vid name: data/savee/AudioVisualClip/DC/a5.avi
11 vid name: data/savee/AudioVisualClip/DC/a6.avi
12 vid name: data/savee/AudioVisualClip/DC/a7.avi
13 vid name: data/savee/AudioVisualClip/DC/a8.avi
^[14 vid name: data/savee/AudioVisualClip/DC/a9.avi
15 vid name: data/savee/AudioVisualClip/DC/d1.avi
16 vid name: data/savee/AudioVisualClip/DC/d10.avi
17 vid name: data/savee/AudioVisualClip/DC/d11.avi
18 vid name: data/savee/AudioVisualClip/DC/d12.avi
19 vid name: data/savee/AudioVisualClip/DC/d13.avi
20 vid name: data/savee/AudioVisualClip/DC/d15.avi
21 vid name: data/savee/AudioVisualClip/DC/d2.avi
22 vid name: data/savee/AudioVisualClip/DC/d3.avi
23 vid name: data/savee/AudioVisualClip/DC/d4.avi
24 vid name: data/savee/AudioVisualClip/DC/d5.avi
25 vid name: data/savee/AudioVisualClip/DC/d6.avi
26 vid name: data/savee/AudioVisualClip/DC/d7.avi
27 vid name: data/savee/AudioVisualClip/DC/d8.avi
28 vid name: data/savee/AudioVisualClip/DC/d9.avi
29 vid name: data/savee/AudioVisualClip/DC/f1.avi
30 vid name: data/savee/AudioVisualClip/DC/f10.avi
31 vid name: data/savee/AudioVisualClip/DC/f11.avi
32 vid name: data/savee/AudioVisualClip/DC/f12.avi
OpenCV Error: Assertion failed (ssize.width > 0 && ssize.height > 0) in resize, file /build/opencv-zcaJjh/opencv-3.2.0+dfsg/modules/imgproc/src/imgwarp.cpp, line 3492
Traceback (most recent call last):
  File "data_cleaning.py", line 52, in vid2frames
    frame = cv2.resize(frame, (48, 48), interpolation=cv2.INTER_CUBIC)
cv2.error: /build/opencv-zcaJjh/opencv-3.2.0+dfsg/modules/imgproc/src/imgwarp.cpp:3492: error: (-215) ssize.width > 0 && ssize.height > 0 in function resize


During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "data_cleaning.py", line 174, in <module>
    main(sys.argv[1:])
  File "data_cleaning.py", line 160, in main
    get_videos(subject)
  File "data_cleaning.py", line 33, in get_videos
    vid2frames(video, temp[3], temp[4][:-4])
  File "data_cleaning.py", line 54, in vid2frames
    frame = np.zeroes(48,48)
AttributeError: module 'numpy' has no attribute 'zeroes'
raja@raja-Inspiron-5558:/mnt/InternalHardDik/Programs/Python/EmotionDet$ exit

Script done on 2018-09-26 10:59:11+0530
